Partial revert no need for shared_ptr in Diff3LineVector

BUG:471234
FIXED-IN:1.10.5